...
        VStack {
            if let _: User = users.first {
                TabView {
                    WeeklyMealPlanView()
                        .tabItem() {
                            Image(systemName: "fork.knife")
                            Text("Meal Plan")
                        }
                    GroceryListView()
                        .tabItem() {
                            Image(systemName: "cart")
                            Text("Grocery List")
                        }
...
                                          "Arrange quinoa, chickpeas, avocado, carrots, and broccoli in a bowl.",
                                          "Drizzle tahini dressing on top and serve."
                                         ],
                           time: "20 Minute(s)",
                           servings: 1,
                           dietaryRestrictions: [true, true, true, false]),
                    Recipe(name: "Gluten-Free Pancakes",
                           image: UIImage(named: "Pancake")?.pngData(),
                           ingredients: ["1 cup gluten-free flour",
                                         "1 tbsp sugar",
                                         "1 tsp baking powder",
                                         "1 egg",
                                         "3/4 cup milk",
...
