...
                    Spacer()
                    
                    Button(action: {
                        saveMeal()
                        dismiss()
                    }) {
                        Text("Add to Plan")
                            .frame(maxWidth: .infinity)
                            .frame(height: 20)
                            .padding()
                            .background(Color.blue)
                            .foregroundColor(.white)
                            .cornerRadius(10)
...
