...
    //search bar
    @State var search: String = ""
    var body: some View {
        NavigationView {
            VStack(spacing: 0) {
                //text field for searching recipes
                TextField("Search for a specific recipe", text: $search)
                    .textFieldStyle(RoundedBorderTextFieldStyle())
                    .padding()
                //list of recipes displayed from recipesold array
                List {
                    ForEach(recipes.filter { recipe in
                        (search.isEmpty || recipe.name.localizedCaseInsensitiveContains(search)) &&
...
